# squares

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copying.txt  readme.md
data/: aleatoire-evolution.xml  aleatoire.xml  arbitraire-nouveaute.xml  arbitraire.xml  correlation-nouveaute.xml  correlation.xml  determination-evolution.xml  determination-nouveaute.xml  determination.xml  squares.xml
framework/: CMakeLists.txt  buffer.hpp  caps.cpp  caps.hpp  common.hpp  compiler.cpp  csv.cpp  csv.hpp  dsa.hpp  error.hpp  mesh.cpp  mesh.hpp  png.cpp  png.hpp  pugixml.cpp  test.cpp  test.hpp  tinyxml2.cpp  util.hpp
samples/: CMakeLists.txt  gl-320-texture-float.cpp  squares.cpp
